--- a/Flagrum.Web/Features/AssetExplorer/Previews/Preview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/Preview.razor
@@ -20,7 +20,8 @@ else if (Item?.Type == ExplorerItemType.Text)
 }
 else if (Item?.Type == ExplorerItemType.Model)
 {
-    <ModelPreview Item="Item"/>
+    @* <ModelPreview Item="Item"/> *@
+    <ModelPreviewV2 Item="Item"/>
 }
 else
 {
