--- a/Flagrum.Desktop/MainWindow.xaml
+++ b/Flagrum.Desktop/MainWindow.xaml
@@ -205,10 +205,8 @@
                                            DefaultCamera="{Binding Camera}"
                                            Initialized="Viewer_OnInitialized">
                             <helix:Viewport3DX.InputBindings>
-                                <MouseBinding Command="helix:ViewportCommands.Rotate" Gesture="MiddleClick" />
-                                <MouseBinding Command="helix:ViewportCommands.Pan" Gesture="Shift+MiddleClick" />
-                                <MouseBinding Command="helix:ViewportCommands.Rotate" Gesture="LeftClick" />
-                                <MouseBinding Command="helix:ViewportCommands.Pan" Gesture="RightClick" />
+                                <MouseBinding Command="helix:ViewportCommands.Rotate"  Gesture="{Binding ViewportRotateGesture}" />
+                                <MouseBinding Command="helix:ViewportCommands.Pan" Gesture="{Binding ViewportPanGesture}"  />
                             </helix:Viewport3DX.InputBindings>
                             <helix:DirectionalLight3D Direction="0, -1, -1" Color="White" />
                             <helix:DirectionalLight3D Direction="0, -1, 1" Color="#AAAAAA" />
